<resources>
    <!--Application name-->
    <string name="app_name">Scan as you shop</string>

    <!--Component names-->
    <!--Buttons-->
    <string name="Loginbutton">Login</string>
    <string name="Registerbutton">Register</string>

    <string name="r_registerbutton">Register</string>

    <string name="am_scanitembutton">Scan items</string>

    <!--Text-->
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>

    <string name="r_usernameText">Username</string>
    <string name="r_passwordText">Password</string>
    <string name="r_passwordReEnterText">Re-Type Password</string>
    <string name="r_emailText">Email</string>
    <string name="r_phoneText">Mobile Phone number</string>

    <string name="list_name">List Name</string>

    <string name="b_scan_item">Scan Item</string>
    <string name="b_checkout">Checkout</string>
    <string name="b_store_checkout">Store Checkout</string>
    <string name="b_start_list_with_name">Start Named List</string>
    <string name="b_start_unnamed_list">Start Un-named List</string>

    <string name="tV_total_label">Total: </string>
    <string name="tv_total_sum">£000.00</string>
    <string name="tV_list_name">Loren Ipsum</string>

    <string name="tV_list_of_lists">Your Shopping Lists</string>

    <string name="tv_delete_item">Would you like to delete this item?</string>

    <string name="tv_save_list">Would you like to save this list?</string>

    <string name="tv_start_checklist">Would you like to start a checklist?</string>

    <string name="tv_delete_list">Delete this checklist?</string>


    <!--Page names-->
    <string name="Main_Menu">Main Menu</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="title_activity_scan__to__list">Scan_To_List</string>

</resources>
